# multicamera-hand-tracking

./: .gitignore  .pre-commit-config.yaml  Models Tried.xlsx  README.md  mypy.ini  pyproject.toml
cpp_ground_truth_data/: CMakeLists.txt  main.cpp
cpp_ground_truth_data/hardware/: robot_control.cpp  robot_control.hpp  robot_control_hardware.cpp  robot_control_hardware.hpp
data/: 102422072520.csv  102422072520_features.npy  102422072520_targets.npy  805312070126.csv  805312070126_features.npy  805312070126_targets.npy  841612070197.csv  841612070197_features.npy  841612070197_targets.npy  features.npy  targets.npy
logs/: log_805312070126.jsonl  log_Fusion.jsonl
logs/Fist/Both Cameras/Test#1/: landmarks.csv
logs/Fist/Both Cameras/Test#2/: landmarks.csv
logs/Fist/Both Cameras/Test#3/: landmarks.csv
logs/Fist/Both Cameras/Test#4/: landmarks.csv
logs/Fist/Both Cameras/Test#5/: landmarks.csv
logs/Fist/Robot Camera/Test#1/: landmarks.csv
logs/Fist/Robot Camera/Test#2/: landmarks.csv
logs/Fist/Robot Camera/Test#3/: landmarks.csv
logs/Fist/Robot Camera/Test#4/: landmarks.csv
logs/Fist/Robot Camera/Test#5/: landmarks.csv
logs/Fist/Table Camera/Test#1/: landmarks.csv
logs/Fist/Table Camera/Test#2/: landmarks.csv
logs/Fist/Table Camera/Test#3/: landmarks.csv
logs/Fist/Table Camera/Test#4/: landmarks.csv
logs/Fist/Table Camera/Test#5/: landmarks.csv
logs/Fork/Both Cameras/Test#1/: landmarks.csv
logs/Fork/Both Cameras/Test#2/: landmarks.csv
ml_models_trained/: MLNN.h5  MLNN_RELU.h5
models/: 102422072520.h5  841612070197.h5  gradient_boosting_model.joblib  mediapipe_world_model.h5  multi_output_gb_regressor.joblib
models/102422072520/: 102422072520.h5  mark_cache_data  mark_state
models/805312070126/: 805312070126.h5  805312070126.joblib  mark_cache_data  mark_config.yml  mark_state  scaler.joblib
models/841612070197/: 841612070197.h5  mark_cache_data  mark_state
src/: async_app.py  find_transformation.py  learning.py  learning_GB.py  learning_KAN.py  learning_MLP.py  main.py  main_hand.py  main_hand_threads.py  main_holistic.py  main_holistics_threads.py  mp_holistics_example.py  sample_training_data.py  test_tools.py  testing_script.py  valide_ml_model.py
src/camera_thread/: camera.py  camera_frame.py  camera_thread.py  cv_thread.py  help_functions.py  processing_thread.py  rs_ml_thread.py  rs_thread.py  simple_thread.py
src/hand_recognition/: HandLandmarks.py  HolisticLandmarker.py  HolisticLandmarkerSingleton.py  Landmarker.py  LandmarkerSingleton.py  hand_recognizer.py
src/hand_recognizer/: HandLandmarker.py  hand_recognizer.py
src/utils/: constants.py  coordinate_transformer.py  fusion.py  geometry.py  mediapipe_world_model.py  utils.py
tests/: cv_threads_test.py  rs_threads_test.py  test_async_detection.py  test_cosine.py  test_cv_threads.py  test_fusion.py  test_origin_change.py  test_rs_threads.py  transformations_test.py
transformations/: 102422072520.npy  805312070126.npy  841612070197.npy
(+386 files in other folders)
