[tool.poetry]
name = "multicamera-handtracking"
version = "0.1.0"
description = "Stabilize mediapipe handtracking using several cameras (2 cameras)"
authors = ["Ivan Khrop <hrop.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
thread = "^2.0.3"
mediapipe = "^0.10.14"
opencv-python = "^4.10.0.84"
pyrealsense2 = "^2.55.1.6486"
shapely = "^2.0.5"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
pytest = "^8.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
